@@ -9,6 +9,7 @@
 package org.andor.utils;
 
 import java.nio.ByteBuffer;
+import java.nio.ByteOrder;
 import java.nio.DoubleBuffer;
 import java.nio.FloatBuffer;
 import java.nio.IntBuffer;
@@ -18,7 +19,7 @@ public class BufferUtils {
 	/* The static method used to create a byte buffer given the data */
 	public static ByteBuffer createBuffer(byte[] data) {
 		//Create the buffer
-		ByteBuffer buffer = org.lwjgl.BufferUtils.createByteBuffer(data.length);
+		ByteBuffer buffer = ByteBuffer.allocateDirect(data.length).order(ByteOrder.nativeOrder());
 		//Give the data to the buffer
 		buffer.put(data);
 		//Return the buffer
@@ -28,7 +29,7 @@ public class BufferUtils {
 	/* The static method used to create an integer buffer given the data */
 	public static IntBuffer createBuffer(int[] data) {
 		//Create the buffer
-		IntBuffer buffer = org.lwjgl.BufferUtils.createIntBuffer(data.length);
+		IntBuffer buffer = ByteBuffer.allocateDirect(data.length * Integer.BYTES).order(ByteOrder.nativeOrder()).asIntBuffer();
 		//Give the data to the buffer
 		buffer.put(data);
 		//Return the buffer
@@ -38,7 +39,7 @@ public class BufferUtils {
 	/* The static method used to create a float buffer given the data */
 	public static FloatBuffer createBuffer(float[] data) {
 		//Create the buffer
-		FloatBuffer buffer = org.lwjgl.BufferUtils.createFloatBuffer(data.length);
+		FloatBuffer buffer = ByteBuffer.allocateDirect(data.length * Float.BYTES).order(ByteOrder.nativeOrder()).asFloatBuffer();
 		//Give the data to the buffer
 		buffer.put(data);
 		//Return the buffer
@@ -48,7 +49,7 @@ public class BufferUtils {
 	/* The static method used to create a double buffer given the data */
 	public static DoubleBuffer createBuffer(double[] data) {
 		//Create the buffer
-		DoubleBuffer buffer = org.lwjgl.BufferUtils.createDoubleBuffer(data.length);
+		DoubleBuffer buffer = ByteBuffer.allocateDirect(data.length * Double.BYTES).order(ByteOrder.nativeOrder()).asDoubleBuffer();
 		//Give the data to the buffer
 		buffer.put(data);
 		//Return the buffer
