@@ -1,10 +1,13 @@
 package org.andor.utils;
 import java.util.List;
 
+import org.andor.core.Settings;
 import org.andor.core.logger.Log;
 import org.andor.core.logger.Logger;
 import org.lwjgl.opengl.GL11;
 import org.lwjgl.opengl.GL20;
+
+import android.opengl.GLES20;
 
 public class ShaderUtils {
 	
@@ -20,31 +23,54 @@ public class ShaderUtils {
 		int shader = 0;
 		//Try and catch statement
 		try {
-			//Create the shader
-			shader = GL20.glCreateShader(shaderType);
-			//Check the shader was created
-			if (shader == 0) {
-				//Log an error
-				Logger.log("Andor - ShaderUtils createShader()" , "Error when creating shader with the type: " + shaderType , Log.ERROR);
-				//Return 0
-				return 0;
-			}
-			//The shader source
-			StringBuilder shaderSource = new StringBuilder();
-			//Look at all of the shader file text
-			for (int a = 0; a < shaderCode.size(); a++)
-				//Add onto the shader source
-				shaderSource.append(shaderCode.get(a)).append('\n');
-			//Load the shader file
-			GL20.glShaderSource(shader , shaderSource);
-			//Compile the shader
-			GL20.glCompileShader(shader);
+			//Make sure Andor isn't currently running on Android
+			if (! Settings.AndroidMode) {
+				//Create the shader
+				shader = GL20.glCreateShader(shaderType);
+				//Check the shader was created
+				if (shader == 0) {
+					//Log an error
+					Logger.log("Andor - ShaderUtils createShader()" , "Error when creating shader with the type: " + shaderType , Log.ERROR);
+					//Return 0
+					return 0;
+				}
+				//The shader source
+				StringBuilder shaderSource = new StringBuilder();
+				//Look at all of the shader file text
+				for (int a = 0; a < shaderCode.size(); a++)
+					//Add onto the shader source
+					shaderSource.append(shaderCode.get(a)).append('\n');
+				//Load the shader file
+				GL20.glShaderSource(shader , shaderSource);
+				//Compile the shader
+				GL20.glCompileShader(shader);
 
-			//Check for an error
-			if (GL20.glGetShaderi(shader, GL20.GL_COMPILE_STATUS) == GL11.GL_FALSE) {
-				//Log an error message
-				Logger.log("Andor - ShaderUtils createShader()", "Error compiling the shader", Log.ERROR);
-				Logger.log("Andor - ShaderInformation", getLogInformation(shader), Log.ERROR);
+				//Check for an error
+				if (GL20.glGetShaderi(shader, GL20.GL_COMPILE_STATUS) == GL11.GL_FALSE) {
+					//Log an error message
+					Logger.log("Andor - ShaderUtils createShader()", "Error compiling the shader", Log.ERROR);
+					Logger.log("Andor - ShaderInformation", getLogInformation(shader), Log.ERROR);
+				}
+			} else {
+				//Create the shader
+				shader = GLES20.glCreateShader(shaderType);
+				//Check the shader was created
+				if (shader == 0) {
+					//Log an error
+					Logger.log("Andor - ShaderUtils createShader()" , "Error when creating shader with the type: " + shaderType , Log.ERROR);
+					//Return 0
+					return 0;
+				}
+				//The shader source
+				StringBuilder shaderSource = new StringBuilder();
+				//Look at all of the shader file text
+				for (int a = 0; a < shaderCode.size(); a++)
+					//Add onto the shader source
+					shaderSource.append(shaderCode.get(a)).append('\n');
+				//Load the shader file
+				GLES20.glShaderSource(shader , shaderSource.toString());
+				//Compile the shader
+				GLES20.glCompileShader(shader);
 			}
 		} catch (Exception e) {
 			e.printStackTrace();
